--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -45,9 +45,9 @@ jobs:
       id: get-hash
       with: 
         patterns: |
-          bip39-standalone.html
-    # - name: Echo hash
-    #   run: echo ${{ steps.get-hash.outputs.hash }}
+          **/bip39-standalone.html
+    - name: Echo hash
+      run: echo ${{ steps.get-hash.outputs.hash }}
     # - uses: actions/upload-artifact@v2
     #   with:
     #     name: Asset Hashes
